<resources>
    <string name="app_name">TheMovieDb</string>
    <string name="home">Home</string>
    <string name="movie">Movies</string>
    <string name="series">Series</string>
    <string name="more">More</string>
    <string name="setting">Setting</string>
    <string name="fake_user">frankmungno</string>
    <string name="fake_gmail">frankmungnodev@gmail.com</string>
    <string name="movie_poster">Movie Poster</string>
    <string name="retry">Retry</string>
    <string name="error_generic">Something went wrong!</string>
    <string name="error_server_500">Server under maintenance!</string>
    <string name="error_server_404">Data not found!</string>
    <string name="error_no_internet">Please check your internet connection and try again!</string>
    <string name="error_socket_timeout">Connection timeout!</string>
</resources>