<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">

    <item
        android:id="@+id/home"
        android:icon="@drawable/ic_home"
        android:title="@string/home" />

    <item
        android:id="@+id/movies"
        android:icon="@drawable/ic_movie"
        android:title="@string/movie" />

    <item
        android:id="@+id/series"
        android:icon="@drawable/ic_series"
        android:title="@string/series" />

    <item android:title="@string/more">
        <menu>
            <group
                android:id="@+id/settings"
                android:checkableBehavior="single">
                <item
                    android:id="@+id/setting"
                    android:checkable="false"
                    android:icon="@drawable/ic_settings"
                    android:title="@string/setting" />
            </group>
        </menu>
    </item>
</menu>