<?xml version="1.0" encoding="utf-8"?>
<navigation xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main_graph"
    app:startDestination="@id/home">

    <fragment
        android:id="@+id/home"
        android:name="com.selftaughtdev.themoviedb.components.home.FragmentHome"
        android:label="@string/home"
        tools:layout="@layout/fragment_home" />
    <fragment
        android:id="@+id/movies"
        android:name="com.selftaughtdev.themoviedb.components.movies.FragmentMovies"
        android:label="@string/movie"
        tools:layout="@layout/fragment_movies" />
    <fragment
        android:id="@+id/series"
        android:name="com.selftaughtdev.themoviedb.components.series.FragmentSeries"
        android:label="@string/series"
        tools:layout="@layout/fragment_series" />
</navigation>